# opengl_sfml_window

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  format_codebase.sh  lint_codebase.sh
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-request.md  enhancement-request.md
shader/: shader.frag  shader.vert
src/: main.cpp
src/opengl_driver/: opengl_driver.cpp  opengl_driver.hpp
src/pch/: opengl_sfml_window_pch.hpp
